l'implementation de spring security dans notre projet est terminé
Signed-off-by: KhalidTnaji <khalidtnaji@gmail.com>

--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -1,15 +1,12 @@
-<!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="template">
+<!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org">
+
 <head>
-<title>home page</title>
+<title>Connexion Particulierd</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script
@@ -23,13 +20,13 @@
 
 <body>
 	<div th:replace="template :: header"></div>
-	 <div class="row" style="height:500px">
-           
-		<h1>HOME</h1>
-		<a href="AAloginFreelancer">Login Freelancer</a> <a
-			href="BBloginParticulier">Login Particulier</a>
+
+	<div class="col-md-6 offset-md-3">
+	 EROOOOOOOOOOOOOOOOOR
+
 	</div>
 	<div th:replace="template :: footer"></div>
+
 </body>
 
 </html>
