--- a/src/main/resources/templates/profilParticulier.html
+++ b/src/main/resources/templates/profilParticulier.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+
 <head>
 <title>Bootstrap 4 Website Example</title>
 <meta charset="utf-8">
@@ -19,7 +21,8 @@
 	<div th:replace="template :: header"></div>
 	<section>
 		<div class="container" style="margin-top: 30px">
-			<nav class="navbar navbar-expand-sm">
+			<nav class="navbar navbar-expand-sm"
+				sec:authorize="hasRole('ROLE_PARTICULIER')">
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbar-list-4" aria-controls="navbarNav"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -36,8 +39,10 @@
 						</a>
 							<div class="dropdown-menu"
 								aria-labelledby="navbarDropdownMenuLink">
-								<a class="dropdown-item" th:href="@{/pageUpdateProfileParticulier(id=${particulier.idParticulier})}">Modifier Profile</a> <a
-									class="dropdown-item" href="#">Deconnexion</a>
+								<a class="dropdown-item"
+									th:href="@{/BBpageUpdateProfileParticulier(id=${particulier.idParticulier})}">Modifier
+									Profile</a> <a class="dropdown-item" href="/logout_Particulier"
+									th:href="@{/BBlogout_Particulier}">Deconnexion</a>
 							</div></li>
 					</ul>
 				</div>
@@ -67,9 +72,11 @@
 					<div class="container">
 
 						<button type="button" class="btn btn-primary"
-							data-toggle="collapse" data-target="#demo">Ajouter une
+							data-toggle="collapse" data-target="#demo"
+							sec:authorize="hasRole('ROLE_PARTICULIER')">Ajouter une
 							offre</button>
-						<div id="demo" class="collapse">
+						<div id="demo" class="collapse"
+							sec:authorize="hasRole('ROLE_PARTICULIER')">
 
 							<span class="anchor" id="formRegister"></span>
 							<hr class="mb-5">
@@ -77,7 +84,7 @@
 							<div class="card card-outline-secondary">
 								<div class="card-body">
 									<form class="form" role="form"
-										th:action="@{/addOffre(id=${particulier.idParticulier})}"
+										th:action="@{/BBaddOffre(id=${particulier.idParticulier})}"
 										action="#" autocomplete="off" method="post">
 										<div class="form-group">
 											<label for="inputDiplomes">Votre Offre</label>
@@ -96,14 +103,18 @@
 						</div>
 					</div>
 					<h2>Offres</h2>
-					<h5>liste des Offres</h5>
-					<div class="container mt-3" th:each="offre: ${particulier.offres}">
-						<div class="media border p-3 w-75">
-							<div class="media-body">
-								<th:block th:text="${offre.description}"></th:block>
-								<a th:href="@{/deleteOffre(idOffre=${offre.idOffre},idParticulier=${particulier.idParticulier})}"
-									class="btn btn-outline-primary">Supprimer</a>
-
+					<div th:if="${particulier.offres != null }">
+						<h5>liste des Offres</h5>
+						<div class="container mt-3" th:each="offre: ${particulier.offres}">
+							<div class="media border p-3 w-75">
+								<div class="media-body">
+									<th:block th:text="${offre.description}"></th:block>
+									<div sec:authorize="hasRole('ROLE_PARTICULIER')">
+										<a
+											th:href="@{/BBdeleteOffre(idOffre=${offre.idOffre},idParticulier=${particulier.idParticulier})}"
+											class="btn btn-outline-primary">Supprimer</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
