--- a/src/main/resources/templates/profilFreelancer.html
+++ b/src/main/resources/templates/profilFreelancer.html
@@ -20,7 +20,8 @@
 	<div th:replace="template :: header"></div>
 	<section>
 		<div class="container" style="margin-top: 30px">
-			<nav class="navbar navbar-expand-sm" sec:authorize="hasRole('ROLE_FREELANCER')">
+			<nav class="navbar navbar-expand-sm"
+				sec:authorize="hasRole('ROLE_FREELANCER')">
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbar-list-4" aria-controls="navbarNav"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -49,6 +50,10 @@
 				<div class="col-sm-4">
 					<h2 th:text="${freelancer.nom}">
 						<small th:text="${freelancer.prenom}"></small>
+					</h2>
+					<h2>
+						Note Moyenne <span class="badge badge-success float-sm-right"
+							th:text="${note}"></span>
 					</h2>
 					<p>Some text about me in</p>
 					<h3>Domaines de Competances</h3>
@@ -171,7 +176,7 @@
 								</form>
 
 								<form action="#" class="form" role="form"
-									th:action="@{/BBaddNote(id=${freelancer.idFreelancer})}"
+									th:action="@{/BBaddNote(id=${freelancer.idFreelancer},idParticulier=${particulier.idParticulier})}"
 									autocomplete="off" method="post">
 
 									<div class="form-group">
@@ -180,11 +185,12 @@
 											class="text-info">merci de donner un note entre 0 et
 											10.</small>
 									</div>
+									<div class="form-group">
+										<button type="submit"
+											class="btn btn-success btn-lg float-right">Enregistrer</button>
+									</div>
 								</form>
-								<div class="form-group">
-									<button type="submit"
-										class="btn btn-success btn-lg float-right">Enregistrer</button>
-								</div>
+
 							</div>
 						</div>
 						<!-- /form card register -->
