--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -11,7 +11,7 @@
 <meta name="author" content="" />
 
 <!-- Title -->
-<title>Acces Refuse</title>
+<title>Accès refusé</title>
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 <link rel="stylesheet"
@@ -24,6 +24,7 @@
 
 <body class="bg-dark text-white py-5">
 	<div th:replace="template :: header"></div>
+
 	<div class="container py-5">
 		<div class="row">
 			<div class="col-md-2 text-center">
@@ -44,7 +45,9 @@
 		</div>
 	</div>
 
+
 	<div th:replace="template :: footer"></div>
+	
 </body>
 
 </html>
