--- a/src/main/resources/templates/profiles/profilFreelancer.html
+++ b/src/main/resources/templates/profiles/profilFreelancer.html
@@ -13,7 +13,7 @@
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../static/styles.css"
+<link rel="stylesheet" type="text/css" href="../../static/styles.css"
 	th:href="@{/styles.css}">
 </head>
 <body>
@@ -22,13 +22,11 @@
 		<div class="container" style="margin-top: 30px">
 			<div class="row">
 				<div class="col-sm-4">
-					<h2 th:text="${freelancer.nom}">
-						<small th:text="${freelancer.prenom}"></small>
-					</h2>
+					<h2 th:text="${freelancer.nom}"></h2>
+					<h2><small th:text="${freelancer.prenom}"></small></h2>
 					<h2>Note Moyenne <span class="badge badge-success float-sm-right"th:text="${note}"></span>
 					</h2>
-					<p>Loubbardi mohamed</p>
-					<h3>Domaines de Competances</h3>
+					<h3>domaine de compétence</h3>
 					<p>développeur web</p>
 					<ul class="nav nav-pills flex-column"
 						th:if="${freelancer.competences != null}">
@@ -48,7 +46,7 @@
 									th:action="@{/AAaddCompetance(id=${freelancer.idFreelancer})}"
 									action="#" autocomplete="off" method="post">
 									<div class="form-group">
-										<label for="exampleSt">Competances</label> <select
+										<label for="exampleSt">Compétences</label> <select
 											class="form-control" id="exampleSt" name="domaine">
 											<option>Aide médico</option>
 											<option>Baby sitting et Employés à domicile</option>
@@ -86,7 +84,7 @@
 					<div class="container mt-3">
 						<div class="media border p-3 w-75">
 							<div class="media-body">
-								<h4>Numero de telephone : <small><i th:text="${freelancer.mobile}"></i></small>
+								<h4>Numéro de téléphone : <small><i th:text="'0'+${freelancer.mobile}"></i></small>
 								</h4>
 								<h4>Email : <small><i th:text="${freelancer.email}"></i></small>
 								</h4>
@@ -151,14 +149,16 @@
 								</form>
 
 								<form action="#" class="form" role="form"
-									th:action="@{/BBaddNote(id=${freelancer.idFreelancer},idParticulier=${particulier.idParticulier})}"
+									th:action="@{/BBaddNote(id=${freelancer.idFreelancer},idParticulier=${session.particulier.idParticulier})}"
 									autocomplete="off" method="post">
 
 									<div class="form-group">
-										<label for="B">Votre Note a ce Profile</label> <input
+										<label for="B">Votre Note sur ce Profil</label> <input
 											type="number" class="form-control" name="note" id="B" /> <small
-											class="text-info">merci de donner un note entre 0 et
+											class="text-info">merci de donner une note entre 0 et
 											10.</small>
+											<small th:if="${message_Note}"
+											class="text-warn">note invalid !</small>
 									</div>
 									<div class="form-group">
 										<button type="submit"
