--- a/src/main/resources/templates/profiles/profilParticulier.html
+++ b/src/main/resources/templates/profiles/profilParticulier.html
@@ -14,41 +14,13 @@
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../static/styles.css"
+<link rel="stylesheet" type="text/css" href="../../static/styles.css"
 	th:href="@{/styles.css}">
 </head>
 <body>
 	<div th:replace="template :: header"></div>
 	<section>
-		<div class="container" style="margin-top: 30px">
-<!-- 			<nav class="navbar navbar-expand-sm" -->
-<!-- 				sec:authorize="hasRole('ROLE_PARTICULIER')"> -->
-<!-- 				<button class="navbar-toggler" type="button" data-toggle="collapse" -->
-<!-- 					data-target="#navbar-list-4" aria-controls="navbarNav" -->
-<!-- 					aria-expanded="false" aria-label="Toggle navigation"> -->
-<!-- 					<span class="navbar-toggler-icon"></span> -->
-<!-- 				</button> -->
-<!-- 				<div class="collapse navbar-collapse" id="navbar-list-4"> -->
-<!-- 					<ul class="navbar-nav"> -->
-<!-- 						<li class="nav-item dropdown"><a -->
-<!-- 							class="nav-link dropdown-toggle" href="#" -->
-<!-- 							id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" -->
-<!-- 							aria-haspopup="true" aria-expanded="false"> <img -->
-<!-- 								src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" -->
-<!-- 								width="40" height="40" class="rounded-circle"> -->
-<!-- 						</a> -->
-<!-- 							<div class="dropdown-menu" -->
-<!-- 								aria-labelledby="navbarDropdownMenuLink"> -->
-<!-- 								<a class="dropdown-item" -->
-<!-- 									th:href="@{/BBpageUpdateProfileParticulier(id=${particulier.idParticulier})}">Modifier -->
-<!-- 									Profile</a> <a class="dropdown-item" href="/logout_Particulier" -->
-<!-- 									th:href="@{/BBlogout_Particulier}">Deconnexion</a> -->
-<!-- 							</div></li> -->
-<!-- 					</ul> -->
-<!-- 				</div> -->
-<!-- 			</nav> -->
-			
-			
+		<div class="container" style="margin-top: 30px">		
 			<div class="row">
 				<div class="col-sm-4">
 					<h2 th:text="${particulier.nom}">
@@ -59,7 +31,7 @@
 						<div class="media border p-3 w-75">
 							<div class="media-body">
 								<h4>
-									Tele : <small><i th:text="${particulier.mobile}"></i></small>
+									Numéro de téléphone : <small><i th:text="'0'+${particulier.mobile}"></i></small>
 								</h4>
 								<h4>
 									Email : <small><i th:text="${particulier.email}"></i></small>
