--- a/src/main/resources/templates/sign In/forgotPasswordParticulier.html
+++ b/src/main/resources/templates/sign In/forgotPasswordParticulier.html
@@ -6,25 +6,25 @@
 	<title>Connexion Particulier</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}" href="../static/vendor/animate/animate.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}" href="../static/vendor/css-hamburgers/hamburgers.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}" href="../static/vendor/animsition/css/animsition.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}" href="../static/vendor/select2/select2.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}" href="../static/vendor/daterangepicker/daterangepicker.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/util.css}" href="../static/vendor/util.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/main.css}" href="../static/vendor/main.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}" href="../../static/vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}" href="../../static/vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}" href="../../static/vendor/animsition/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}" href="../../static/vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}" href="../../static/vendor/daterangepicker/daterangepicker.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/util.css}" href="../../static/vendor/util.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/main.css}" href="../../static/vendor/main.css">
 	<link rel="stylesheet"	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet"	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-	<script th:src="@{/vendor/animsition/js/animsition.min.js}" src="../static/vendor/animsition/js/animsition.min.js"></script>
-	<script th:src="@{/vendor/select2/select2.min.js}" src="../static/vendor/select2/select2.min.js"></script>
-	<script th:src="@{/vendor/daterangepicker/moment.min.js}" src="../static/vendor/daterangepicker/moment.min.js"></script>
-	<script th:src="@{/vendor/daterangepicker/daterangepicker.js}" src="../static/vendor/daterangepicker/daterangepicker.js"></script>
-	<script th:src="@{/vendor/countdowntime/countdowntime.js}" src="../static/vendor/countdowntime/countdowntime.js"></script>
-	<script th:src="@{/vendor/main.js}" src="../static/vendor/main.js"></script>
-	<link rel="stylesheet" type="text/css" href="../static/styles.css"
+	<script th:src="@{/vendor/animsition/js/animsition.min.js}" src="../../static/vendor/animsition/js/animsition.min.js"></script>
+	<script th:src="@{/vendor/select2/select2.min.js}" src="../../static/vendor/select2/select2.min.js"></script>
+	<script th:src="@{/vendor/daterangepicker/moment.min.js}" src="../../static/vendor/daterangepicker/moment.min.js"></script>
+	<script th:src="@{/vendor/daterangepicker/daterangepicker.js}" src="../../static/vendor/daterangepicker/daterangepicker.js"></script>
+	<script th:src="@{/vendor/countdowntime/countdowntime.js}" src="../../static/vendor/countdowntime/countdowntime.js"></script>
+	<script th:src="@{/vendor/main.js}" src="../../static/vendor/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="../../static/styles.css"
 	th:href="@{/styles.css}">
 	
 </head>
@@ -36,7 +36,7 @@
 				<form class="login100-form validate-form" role="form" 
 					autocomplete="off" id="loginForm" th:action="@{/resetPasswordParticulier}"
 					method="POST">
-					<span class="login100-form-title p-b-43"> se connecter comme un Freelancer
+					<span class="login100-form-title p-b-43"> se connecter comme un Particulier
 					</span>
 					<div class="form-group">
 						<label for="inputResetPasswordEmail">Email</label> <input
@@ -48,7 +48,7 @@
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">envoyer le Code</button>
 					</div>
-					<div class="text-center p-t-46 p-b-20" th:if="${message_Mail}">Adresse mail introuvable</div>
+					<div class="text-center p-t-46 p-b-20" th:if="${message_Mail}">Adresse e-mail introuvable</div>
 					<div class="text-center p-t-46 p-b-20">
 						<a th:href="@{/particulierinscription}" class="btn btn-primary" th:if="${message_Mail}">
 							S'inscrire 
