--- a/src/main/resources/templates/sign In/loginParticulier.html
+++ b/src/main/resources/templates/sign In/loginParticulier.html
@@ -6,25 +6,25 @@
 	<title>Connexion particulier</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}" href="../static/vendor/animate/animate.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}" href="../static/vendor/css-hamburgers/hamburgers.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}" href="../static/vendor/animsition/css/animsition.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}" href="../static/vendor/select2/select2.min.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}" href="../static/vendor/daterangepicker/daterangepicker.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/util.css}" href="../static/vendor/util.css">
-	<link rel="stylesheet" type="text/css" th:href="@{/vendor/main.css}" href="../static/vendor/main.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animate/animate.css}" href="../../static/vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/css-hamburgers/hamburgers.min.css}" href="../../static/vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/animsition/css/animsition.min.css}" href="../../static/vendor/animsition/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/select2/select2.min.css}" href="../../static/vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/daterangepicker/daterangepicker.css}" href="../../static/vendor/daterangepicker/daterangepicker.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/util.css}" href="../../static/vendor/util.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/vendor/main.css}" href="../../static/vendor/main.css">
 	<link rel="stylesheet"	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet"	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-	<script th:src="@{/vendor/animsition/js/animsition.min.js}" src="../static/vendor/animsition/js/animsition.min.js"></script>
-	<script th:src="@{/vendor/select2/select2.min.js}" src="../static/vendor/select2/select2.min.js"></script>
-	<script th:src="@{/vendor/daterangepicker/moment.min.js}" src="../static/vendor/daterangepicker/moment.min.js"></script>
-	<script th:src="@{/vendor/daterangepicker/daterangepicker.js}" src="../static/vendor/daterangepicker/daterangepicker.js"></script>
-	<script th:src="@{/vendor/countdowntime/countdowntime.js}" src="../static/vendor/countdowntime/countdowntime.js"></script>
-	<script th:src="@{/vendor/main.js}" src="../static/vendor/main.js"></script>
-	<link rel="stylesheet" type="text/css" href="../static/styles.css"
+	<script th:src="@{/vendor/animsition/js/animsition.min.js}" src="../../static/vendor/animsition/js/animsition.min.js"></script>
+	<script th:src="@{/vendor/select2/select2.min.js}" src="../../static/vendor/select2/select2.min.js"></script>
+	<script th:src="@{/vendor/daterangepicker/moment.min.js}" src="../../static/vendor/daterangepicker/moment.min.js"></script>
+	<script th:src="@{/vendor/daterangepicker/daterangepicker.js}" src="../../static/vendor/daterangepicker/daterangepicker.js"></script>
+	<script th:src="@{/vendor/countdowntime/countdowntime.js}" src="../../static/vendor/countdowntime/countdowntime.js"></script>
+	<script th:src="@{/vendor/main.js}" src="../../static/vendor/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="../../static/styles.css"
 	th:href="@{/styles.css}">
 	
 </head>
@@ -45,15 +45,15 @@
 						<label for="uname1">Email</label> <input type="text"
 							class="form-control" name="username" id="uname1"
 							required="required" /> <span class="form-text small text-muted"
-							th:if="${messageValid}"> merci d'entre une adresse email
-							valid </span>
+							th:if="${messageValid}"> merci d'entrer une adresse e-mail
+							valide </span>
 					</div>
 					<div class="form-group">
 						<label>Mot de passe</label> <input type="password"
 							class="form-control" name="password" id="pwd1"
 							required="required" autocomplete="new-password" /> <span
 							class="form-text small text-muted" th:if="${messageValid}">
-							merci de sesaire un Mot de passe </span>
+							merci de saisir un mot de passe </span>
 					</div>
 					
 					<div class="container-login100-form-btn">
@@ -64,7 +64,7 @@
 							<a href="forgotPasswordParticulierPage" class="txt1"> Mot de passe oublié ? </a>
 						</div>
 					</div>
-					<div class="text-center p-t-46 p-b-20" th:if="${messageForm}">Courriel ou mot de passe incorrect</div>
+					<div class="text-center p-t-46 p-b-20" th:if="${messageForm}">adresse e-mail ou mot de passe incorrect</div>
 					<div class="text-center p-t-46 p-b-20">
 						<a th:href="@{/particulierinscription}" class="btn btn-primary" th:if="${messageForm}">
 							S'inscrire 
