--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -27,7 +27,7 @@
 				<li class="nav-item"><a class="nav-link bg-green"
 					th:href="@{/}">Acceuil</a></li>
 				<li class="nav-item"><a class="nav-link text-white"
-					th:href="@{/freelancerPage}">Freelancers</a></li>
+					th:href="@{/freelancerPageSerach}">Freelancers</a></li>
 				<li class="nav-item"><a class="nav-link text-white"
 					th:href="@{/offres}">Offres</a></li>
 			</ul>
@@ -96,11 +96,9 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<h5>Liens rapides</h5>
 					<ul class="list-unstyled quick-links">
-						<li><a href="#"><i class="fa fa-angle-double-right"></i>Acceuil</a></li>
+						<li><a href="/"><i class="fa fa-angle-double-right"></i>Acceuil</a></li>
 						<li><a href="#"><i class="fa fa-angle-double-right"></i>Qui somme nous ?</a></li>
-						<li><a href="#"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
 						<li><a href="#"><i class="fa fa-angle-double-right"></i>Commencer</a></li>
-						<li><a href="#"><i class="fa fa-angle-double-right"></i>Vidéos</a></li>
 					</ul>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4">
@@ -110,8 +108,6 @@
 								class="fa fa-angle-double-right"></i>Acceuil</a></li>
 						<li><a href="javascript:void();"><i
 								class="fa fa-angle-double-right"></i>Qui somme nous ?</a></li>
-						<li><a href="javascript:void();"><i
-								class="fa fa-angle-double-right"></i>FAQ</a></li>
 						<li><a href="javascript:void();"><i
 								class="fa fa-angle-double-right"></i>Commencer</a></li>
 						<li><a href="javascript:void();"><i
@@ -126,8 +122,6 @@
 						<li><a href="javascript:void();"><i
 								class="fa fa-angle-double-right"></i>Qui somme nous ?</a></li>
 						<li><a href="javascript:void();"><i
-								class="fa fa-angle-double-right"></i>FAQ</a></li>
-						<li><a href="javascript:void();"><i
 								class="fa fa-angle-double-right"></i>Commencer</a></li>
 					</ul>
 				</div>
@@ -141,10 +135,6 @@
 								class="fa fa-twitter"></i></a></li>
 						<li class="list-inline-item"><a href=""><i
 								class="fa fa-instagram"></i></a></li>
-						<li class="list-inline-item"><a href=""><i
-								class="fa fa-google-plus"></i></a></li>
-						<li class="list-inline-item"><a href="" target="_blank"><i
-								class="fa fa-envelope"></i></a></li>
 					</ul>
 				</div>
 				</hr>
